<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Шахар Такси</string>
    <string name="title_activity_login_">Шахар Такси</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="register_btn">Зарегистрировать</string>
    <string name="login_btn">Войти</string>
    <string name="username_text">Имя Пользователя</string>
    <string name="login_welcoming">Добро пожаловать в приложение, пожалуйста введите свой логин</string>
    <string name="password_text">Пароль</string>
    <string name="title_activity_register">Регистрация</string>
    <string name="title_activity_order">Заказы</string>
    <string name="order_title">Заказ:</string>
    <string name="orderTypeTime">1 мин = 22 тг</string>
    <string name="getOrderButton">Получить заказ</string>
    <string name="noOrdersText">Нет принятого заказа</string>
    <string name="order_type">Тариф:</string>
    <string name="chooseTarif">Пожалуйста выберите тип тарификации!</string>
    <string name="tarifTime">По времени</string>
    <string name="tarifDistance">По расстоянию</string>
    <string name="stopOrderButton">Закончить заказ</string>
    <string name="done">Готово</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="orderNum">Номер Заказа</string>
    <string name="title_activity_welcome">Добро пожаловать!</string>
    <string name="measureKM">Пути пройдено:</string>
    <string name="measureTime">Времени в пути:</string>
    <string name="sumText">Стоимость</string>
    <string name="orderTypeKM">1 км = 150 тг</string>
    <string name="logoCompany">Shakhar Такси</string>
    <string name="uchot">Как вести учет</string>
    <string name="zayvka">Заявка</string>
    <string name="acceptOrder">Принять заказ</string>
    <string name="fixedPriceText">Фиксированная цена</string>
    <string name="noOrder">Нет заказа</string>
    <string name="title_activity_get_order">Свободные заказы</string>
    <string name="configTxt">Настройка</string>
    <string name="freeOrders">Свободные заказы</string>
    <string name="title_activity_config">Настройка</string>
    <string name="title_activity_fixed_price">Заказ</string>
    <string name="fromBordur">С Бордюра</string>
    <string name="timePribitiya">Выберите время прибытия</string>

</resources>
