<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_for_all"
    tools:context=".Login" >

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/button_yellow"
        android:layout_marginTop="10dp"
        android:layout_alignLeft="@+id/login"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/login"
        android:onClick="openConfig"
        android:layout_marginBottom="25dp"
        android:text="@string/configTxt" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:background="@drawable/button_yellow"
        android:layout_above="@+id/register"
        android:layout_alignLeft="@+id/password"
        android:layout_alignRight="@+id/password"
        android:text="@string/login_btn" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/login"
        android:layout_centerHorizontal="true"
        android:textColor="#FFF"
        android:ems="10"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="17dp"
        android:gravity="center"
        android:textColor="#FFF"
        android:text="@string/login_welcoming"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />



    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/password"
        android:textColor="#FFF"
        android:layout_alignLeft="@+id/password"
        android:layout_marginLeft="22dp"
        android:text="@string/password_text" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView01"
        android:textColor="#FFF"
        android:layout_centerHorizontal="true"
        android:inputType="textPersonName"
        android:ems="10" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/username"
        android:layout_alignLeft="@+id/TextView01"
        android:text="@string/username_text"
        android:textColor="#FFF" />

</RelativeLayout>
